@@ -18,7 +18,15 @@ a single text header and a text.</desc>
       </rng:oneOrMore>
     </rng:group>
   </content>
-  
+  <attList>
+    <attDef ident="xmlns" usage="req">
+      <equiv/>
+      <desc>The TEI default namespace</desc>
+      <datatype><rng:text xmlns:rng="http://relaxng.org/ns/structure/1.0"/></datatype>
+      <defaultVal>http://www.tei-c.org/ns/1.0</defaultVal>
+      <valDesc>A valid XML namespace</valDesc>
+    </attDef>
+  </attList>  
   <exemplum>
     <egXML xmlns="http://www.tei-c.org/ns/Examples">      <teiCorpus>
         <teiHeader>
